--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://carterbao.github.io" class="thumbnail">
+				<a href="trick.html" class="thumbnail">
 					<img src="img/5.jpg" alt="...">
 				</a>
 			</div>
