--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</tr>
 								</table>
 								</figure>
-								<p align="center"><span id="sitetime"> We were together for 417 days</span> -- Dec.21th,2015. to Feb.10tn.2017</p>
+								<p align="center"><span id="sitetime"> We were together for 417 days</span> -- Dec.21th,2015. to Feb.10th.2017</p>
 								<!--div class="height-40px"></div>
 								<h2 class="title text-center">Social</h2>
 								<ul class="social">
