--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</tr>
 								</table>
 								</figure>
-								<p align="center"><span id="sitetime"> We were together for 417 days</span> -- Dec.21th,2015. to Feb.10th.2017</p>
+								<p align="center"><span id="sitetime"> </span> since 2015.12.21 1:00</p>
 								<!--div class="height-40px"></div>
 								<h2 class="title text-center">Social</h2>
 								<ul class="social">
@@ -148,7 +148,7 @@ var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours
 var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds)
 document.getElementById("sitetime").innerHTML=" We've been together for " +diffDays+" days "+diffHours+" hours "+diffMinutes+" mins "+diffSeconds+" secs"
 }
-//siteTime()
+siteTime()
 </script>
 	</body>
 </html>
