--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 							<div class="entry-content clearfix">
 								<figure class="img-responsive-center">	
 								<table align="center" cellpadding="10">
-								<tr><td><img class="img-responsive" src="img/marie.jpg" width="200" height="200" alt="Developer Image"> </td>
-								<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-								<td><img class="img-responsive" src="img/carter.jpg" width="200" height="200" alt="Developer Image"></td>
+								<tr ><td><img style="margin-right:10px" class="img-responsive" src="img/marie.jpg" width="200" height="200" alt="Developer Image"> </td>
+								<td><br></td>
+								<td><img style="margin-left:10px" class="img-responsive" src="img/carter.jpg" width="200" height="200" alt="Developer Image"></td>
 								</tr>
 								</table>
 								</figure>
